--- a/views/addpage.html
+++ b/views/addpage.html
@@ -4,21 +4,21 @@
   <h3>Add a Page</h3>
   <hr>
   <form method="POST" action="/wiki/">
-        
+
     <div class="form-group">
       <label for="author" class="col-sm-2 control-label">Page Author</label>
       <div class="col-sm-10">
         <input name="author" type="text" class="form-control"/>
       </div>
     </div>
-    
+
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">Page Title</label>
       <div class="col-sm-10">
         <input name="title" type="text" class="form-control"/>
       </div>
     </div>
-    
+
     <div class="form-group">
       <label for="content" class="col-sm-2 control-label">Page Content</label>
       <div class="col-sm-10">
@@ -33,9 +33,16 @@
       </div>
     </div>
 
+    <div class="form-group">
+      <label for="tags" class="col-sm-2 control-label">Page Tags</label>
+      <div class="col-sm-10">
+        <input name="tags" type="text" class="form-control"/>
+      </div>
+    </div>
+
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">submit</button>
     </div>
-  
+
   </form>
 {% endblock %}
