--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,22 @@
 {% block content %}
   <h3>Pages</h3>
   <hr>
-  <ul class="list-unstyled">
-    <!-- PLACEHOLDER LIST OF PAGES -->
+ {% if pages.length > 0 %}
+  <ul>
+    {% for page in pages %}
+      <li>{{ page | pageLink }}</li>
+    {% endfor %}
   </ul>
+{% else %}
+  There are no pages. Why don't you <a href='/wiki/add'>add one</a>?
+{% endif %}
+
+<!--   <div class="form-group">
+    <label for="status" class="col-sm-2 control-label">Page Status</label>
+    <div class="col-sm-10">
+      <input name="status" type="text" class="form-control"/>
+    </div>
+  </div> -->
+
 {% endblock %}
+
